# Omni-CLI

./: .gitignore  Cargo.toml  install.sh
.github/workflows/: main.yml
config/: cloud-config.json
src/: api_client.rs  main.rs  models.rs  ui.rs
src/commands/: config.rs  init_env.rs  logs.rs  mod.rs  push.rs  rollback.rs  scale.rs  status.rs  up.rs
src/config/: cloud-config.json  cloud-config_v2.json
