[package]
name = "omni"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = "4.5.21"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.9"
serde_yaml = "0.9.34"
spinners = "4.1.1"
tabled = "0.16.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
