[package]
name = "omni"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = "4.5.23"
console = "0.15.10"
dialoguer = "0.11.0"
flate2 = "1.0.35"
indicatif = "0.17.9"
serde_yaml = "0.9.34"
spinners = "4.1.1"
tabled = "0.17.0"
tar = "0.4.43"
reqwest = { version = "0.12.12", features = ["multipart"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "1.11.0", features = ["v4"] }
tempfile = "3.14.0"
walkdir = "2.5.0"
ignore = "0.4.23"
pathdiff = "0.2.3"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
version = "3.0.0"
